ES6 module added

--- a/index.html
+++ b/index.html
@@ -11,16 +11,10 @@
     <!-- librerie esterne -->
     <script src="extension/seedrandom.js"></script>
     <script src="extension/jsSHA.js"></script>
-    <!-- includo le classi -->
-    <script src="class/Codifica.js"></script>
-    <script src="class/OperazioniCrittografiche.js"></script>
-    <script src="class/Hash.js"></script>
-    <script src="class/OperazioniLogiche.js"></script>
-    <script src="class/Sbox.js"></script>
-    <!-- --- -->
     <script src="extension/classi.js"></script>
-    <script src="cipher.js"></script>
-    <script src="script.js"></script>
+    <!-- --- -->
+    <script src="cipher.js" type="module"></script>
+    <script src="script.js" type="module"></script>
     <script src="../js/script.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="style.css">
