--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <hr>
                 <h2>Utilizza questo Algoritmo</h2>
                 <p>
-                    Visualizza il tutorial: <a href="tutorial.html" target="_blank" rel="noopener noreferrer">tutorial</a>
+                    <a href="tutorial.html" rel="noopener noreferrer">Visualizza il tutorial</a>
                 </p>
             </div>
             <!-- 
