--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <!-- --- -->
                 <button title="Converti" type="button" id="btn-cifra" class="btn">Cifra</button>
                 <!-- --- -->
+                <span id="tempo_di_cifratura"></span>
                 <p title="Clicca per copiare" class="glass-container" id="d1"></p>
                 <button type="button" class="btn text copy_text check_animation" data-target="d1"
                     title="Copia Testo Cifrato">
